Fixes music page alignment issue on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -834,6 +834,10 @@ and (min-width : 326px) and (max-width: 481px) {
   .project-page-table-mobile-icon {
     margin-top: 10px
   }
+
+  .project-page-song h2{
+    padding-top: 15px;
+  }
   
 
   /* 404 Page CSS */
